@@ -1,32 +1,32 @@
 /*
- * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
+ * ORACLE PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
  *
- * This code is free software; you can redistribute it and/or modify it
- * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.  Oracle designates this
- * particular file as subject to the "Classpath" exception as provided
- * by Oracle in the LICENSE file that accompanied this code.
  *
- * This code is distributed in the hope that it will be useful, but WITHOUT
- * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
- * FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
- * version 2 for more details (a copy is included in the LICENSE file that
- * accompanied this code).
  *
- * You should have received a copy of the GNU General Public License version
- * 2 along with this work; if not, write to the Free Software Foundation,
- * Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
  *
- * Please contact Oracle, 500 Oracle Parkway, Redwood Shores, CA 94065 USA
- * or visit www.oracle.com if you need additional information or have any
- * questions.
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
  */
 
 /*
- * This file is available under and governed by the GNU General Public
- * License version 2 only, as published by the Free Software Foundation.
- * However, the following notice accompanied the original version of this
- * file:
+ *
+ *
+ *
+ *
  *
  * Written by Doug Lea with assistance from members of JCP JSR-166
  * Expert Group and released to the public domain, as explained at
@@ -34,9 +34,7 @@
  */
 
 package java.util.concurrent.locks;
-
-import jdk.internal.misc.VirtualThreads;
-import jdk.internal.misc.Unsafe;
+import sun.misc.Unsafe;
 
 /**
  * Basic thread blocking primitives for creating locks and other
@@ -49,10 +47,6 @@ import jdk.internal.misc.Unsafe;
  * it <em>may</em> block.  A call to {@code unpark} makes the permit
  * available, if it was not already available. (Unlike with Semaphores
  * though, permits do not accumulate. There is at most one.)
- * Reliable usage requires the use of volatile (or atomic) variables
- * to control when to park or unpark.  Orderings of calls to these
- * methods are maintained with respect to volatile variable accesses,
- * but not necessarily non-volatile variable accesses.
  *
  * <p>Methods {@code park} and {@code unpark} provide efficient
  * means of blocking and unblocking threads that do not encounter the
@@ -83,83 +77,65 @@ import jdk.internal.misc.Unsafe;
  * useful for most concurrency control applications.  The {@code park}
  * method is designed for use only in constructions of the form:
  *
- * <pre> {@code
- * while (!canProceed()) {
- *   // ensure request to unpark is visible to other threads
- *   ...
- *   LockSupport.park(this);
- * }}</pre>
+ *  <pre> {@code
+ * while (!canProceed()) { ... LockSupport.park(this); }}</pre>
  *
- * where no actions by the thread publishing a request to unpark,
- * prior to the call to {@code park}, entail locking or blocking.
- * Because only one permit is associated with each thread, any
- * intermediary uses of {@code park}, including implicitly via class
- * loading, could lead to an unresponsive thread (a "lost unpark").
+ * where neither {@code canProceed} nor any other actions prior to the
+ * call to {@code park} entail locking or blocking.  Because only one
+ * permit is associated with each thread, any intermediary uses of
+ * {@code park} could interfere with its intended effects.
  *
  * <p><b>Sample Usage.</b> Here is a sketch of a first-in-first-out
  * non-reentrant lock class:
- * <pre> {@code
+ *  <pre> {@code
  * class FIFOMutex {
  *   private final AtomicBoolean locked = new AtomicBoolean(false);
  *   private final Queue<Thread> waiters
- *     = new ConcurrentLinkedQueue<>();
+ *     = new ConcurrentLinkedQueue<Thread>();
  *
  *   public void lock() {
  *     boolean wasInterrupted = false;
- *     // publish current thread for unparkers
- *     waiters.add(Thread.currentThread());
+ *     Thread current = Thread.currentThread();
+ *     waiters.add(current);
  *
  *     // Block while not first in queue or cannot acquire lock
- *     while (waiters.peek() != Thread.currentThread() ||
+ *     while (waiters.peek() != current ||
  *            !locked.compareAndSet(false, true)) {
  *       LockSupport.park(this);
- *       // ignore interrupts while waiting
- *       if (Thread.interrupted())
+ *       if (Thread.interrupted()) // ignore interrupts while waiting
  *         wasInterrupted = true;
  *     }
  *
  *     waiters.remove();
- *     // ensure correct interrupt status on return
- *     if (wasInterrupted)
- *       Thread.currentThread().interrupt();
+ *     if (wasInterrupted)          // reassert interrupt status on exit
+ *       current.interrupt();
  *   }
  *
  *   public void unlock() {
  *     locked.set(false);
  *     LockSupport.unpark(waiters.peek());
  *   }
- *
- *   static {
- *     // Reduce the risk of "lost unpark" due to classloading
- *     Class<?> ensureLoaded = LockSupport.class;
- *   }
  * }}</pre>
- *
- * @since 1.5
+ */
+
+/**
+ * 通过发放许可，实现线程的挂起和唤醒
+ */
+/**
+ * 1.park和unpark应该成对
+ * 2.如果线程已经被park，处于阻塞状态，那么调用unpark会发送一个permit，线程就会解除阻塞，正常允许
+ * 3.如果线程没有被park，处于正常运行状态，那么调用unpark会发送一个permit，等待下次park时，将不会阻塞线程
+ * 4.线程处于运行状态，多次调用unpark，最多只会发放一个permit，这个和Semaphores不一样
  */
 public class LockSupport {
     private LockSupport() {} // Cannot be instantiated.
 
     private static void setBlocker(Thread t, Object arg) {
-        U.putReferenceOpaque(t, PARKBLOCKER, arg);
-    }
-
-    /**
-     * Sets the object to be returned by invocations of {@link
-     * #getBlocker getBlocker} for the current thread. This method may
-     * be used before invoking the no-argument version of {@link
-     * LockSupport#park() park()} from non-public objects, allowing
-     * more helpful diagnostics, or retaining compatibility with
-     * previous implementations of blocking methods.  Previous values
-     * of the blocker are not automatically restored after blocking.
-     * To obtain the effects of {@code park(b}}, use {@code
-     * setCurrentBlocker(b); park(); setCurrentBlocker(null);}
-     *
-     * @param blocker the blocker object
-     * @since 14
-     */
-    public static void setCurrentBlocker(Object blocker) {
-        U.putReferenceOpaque(Thread.currentThread(), PARKBLOCKER, blocker);
+        // Even though volatile, hotspot doesn't need a write barrier here.
+        /**
+         * 实现监控，这个对象是用来记录线程被阻塞时被谁阻塞的，用于线程监控和分析工具来定位原因的。
+         */
+        UNSAFE.putObject(t, parkBlockerOffset, arg);
     }
 
     /**
@@ -173,14 +149,15 @@ public class LockSupport {
      * @param thread the thread to unpark, or {@code null}, in which case
      *        this operation has no effect
      */
+    /**
+     * 1.park和unpark应该成对
+     * 2.如果线程已经被park，处于阻塞状态，那么调用unpark会发送一个permit，线程就会解除阻塞，正常允许
+     * 3.如果线程没有被park，处于正常运行状态，那么调用unpark会发送一个permit，等待下次park时，将不会阻塞线程
+     * 4.线程处于运行状态，多次调用unpark，只会发放一个permit
+     */
     public static void unpark(Thread thread) {
-        if (thread != null) {
-            if (thread.isVirtual()) {
-                VirtualThreads.unpark(thread);
-            } else {
-                U.unpark(thread);
-            }
-        }
+        if (thread != null)
+            UNSAFE.unpark(thread);
     }
 
     /**
@@ -211,29 +188,27 @@ public class LockSupport {
      *        thread parking
      * @since 1.6
      */
+    /**
+     * 线程挂起
+     * 1.unpark解除阻塞
+     * 2.Thread.interrupt解除阻塞
+     * 3.其他
+     */
     public static void park(Object blocker) {
         Thread t = Thread.currentThread();
         setBlocker(t, blocker);
-        try {
-            if (t.isVirtual()) {
-                VirtualThreads.park();
-            } else {
-                U.park(false, 0L);
-            }
-        } finally {
-            setBlocker(t, null);
-        }
+        UNSAFE.park(false, 0L);
+        setBlocker(t, null);
     }
 
     /**
      * Disables the current thread for thread scheduling purposes, for up to
      * the specified waiting time, unless the permit is available.
      *
-     * <p>If the specified waiting time is zero or negative, the
-     * method does nothing. Otherwise, if the permit is available then
-     * it is consumed and the call returns immediately; otherwise the
-     * current thread becomes disabled for thread scheduling purposes
-     * and lies dormant until one of four things happens:
+     * <p>If the permit is available then it is consumed and the call
+     * returns immediately; otherwise the current thread becomes disabled
+     * for thread scheduling purposes and lies dormant until one of four
+     * things happens:
      *
      * <ul>
      * <li>Some other thread invokes {@link #unpark unpark} with the
@@ -262,15 +237,8 @@ public class LockSupport {
         if (nanos > 0) {
             Thread t = Thread.currentThread();
             setBlocker(t, blocker);
-            try {
-                if (t.isVirtual()) {
-                    VirtualThreads.park(nanos);
-                } else {
-                    U.park(false, nanos);
-                }
-            } finally {
-                setBlocker(t, null);
-            }
+            UNSAFE.park(false, nanos);
+            setBlocker(t, null);
         }
     }
 
@@ -310,15 +278,8 @@ public class LockSupport {
     public static void parkUntil(Object blocker, long deadline) {
         Thread t = Thread.currentThread();
         setBlocker(t, blocker);
-        try {
-            if (t.isVirtual()) {
-                VirtualThreads.parkUntil(deadline);
-            } else {
-                U.park(true, deadline);
-            }
-        } finally {
-            setBlocker(t, null);
-        }
+        UNSAFE.park(true, deadline);
+        setBlocker(t, null);
     }
 
     /**
@@ -336,7 +297,7 @@ public class LockSupport {
     public static Object getBlocker(Thread t) {
         if (t == null)
             throw new NullPointerException();
-        return U.getReferenceOpaque(t, PARKBLOCKER);
+        return UNSAFE.getObjectVolatile(t, parkBlockerOffset);
     }
 
     /**
@@ -365,22 +326,17 @@ public class LockSupport {
      * for example, the interrupt status of the thread upon return.
      */
     public static void park() {
-        if (Thread.currentThread().isVirtual()) {
-            VirtualThreads.park();
-        } else {
-            U.park(false, 0L);
-        }
+        UNSAFE.park(false, 0L);
     }
 
     /**
      * Disables the current thread for thread scheduling purposes, for up to
      * the specified waiting time, unless the permit is available.
      *
-     * <p>If the specified waiting time is zero or negative, the
-     * method does nothing. Otherwise, if the permit is available then
-     * it is consumed and the call returns immediately; otherwise the
-     * current thread becomes disabled for thread scheduling purposes
-     * and lies dormant until one of four things happens:
+     * <p>If the permit is available then it is consumed and the call
+     * returns immediately; otherwise the current thread becomes disabled
+     * for thread scheduling purposes and lies dormant until one of four
+     * things happens:
      *
      * <ul>
      * <li>Some other thread invokes {@link #unpark unpark} with the
@@ -403,13 +359,8 @@ public class LockSupport {
      * @param nanos the maximum number of nanoseconds to wait
      */
     public static void parkNanos(long nanos) {
-        if (nanos > 0) {
-            if (Thread.currentThread().isVirtual()) {
-                VirtualThreads.park(nanos);
-            } else {
-                U.park(false, nanos);
-            }
-        }
+        if (nanos > 0)
+            UNSAFE.park(false, nanos);
     }
 
     /**
@@ -443,23 +394,46 @@ public class LockSupport {
      *        to wait until
      */
     public static void parkUntil(long deadline) {
-        if (Thread.currentThread().isVirtual()) {
-            VirtualThreads.parkUntil(deadline);
-        } else {
-            U.park(true, deadline);
-        }
+        UNSAFE.park(true, deadline);
     }
 
     /**
-     * Returns the thread id for the given thread.
+     * Returns the pseudo-randomly initialized or updated secondary seed.
+     * Copied from ThreadLocalRandom due to package access restrictions.
      */
-    static final long getThreadId(Thread thread) {
-        return thread.threadId();
+    static final int nextSecondarySeed() {
+        int r;
+        Thread t = Thread.currentThread();
+        if ((r = UNSAFE.getInt(t, SECONDARY)) != 0) {
+            r ^= r << 13;   // xorshift
+            r ^= r >>> 17;
+            r ^= r << 5;
+        }
+        else if ((r = java.util.concurrent.ThreadLocalRandom.current().nextInt()) == 0)
+            r = 1; // avoid zero
+        UNSAFE.putInt(t, SECONDARY, r);
+        return r;
     }
 
     // Hotspot implementation via intrinsics API
-    private static final Unsafe U = Unsafe.getUnsafe();
-    private static final long PARKBLOCKER
-        = U.objectFieldOffset(Thread.class, "parkBlocker");
+    private static final sun.misc.Unsafe UNSAFE;
+    private static final long parkBlockerOffset;
+    private static final long SEED;
+    private static final long PROBE;
+    private static final long SECONDARY;
+    static {
+        try {
+            UNSAFE = sun.misc.Unsafe.getUnsafe();
+            Class<?> tk = Thread.class;
+            parkBlockerOffset = UNSAFE.objectFieldOffset
+                    (tk.getDeclaredField("parkBlocker"));
+            SEED = UNSAFE.objectFieldOffset
+                    (tk.getDeclaredField("threadLocalRandomSeed"));
+            PROBE = UNSAFE.objectFieldOffset
+                    (tk.getDeclaredField("threadLocalRandomProbe"));
+            SECONDARY = UNSAFE.objectFieldOffset
+                    (tk.getDeclaredField("threadLocalRandomSecondarySeed"));
+        } catch (Exception ex) { throw new Error(ex); }
+    }
 
 }
